refactor: Remove unused imports in main.swift
Enabled the `unused_import` rule in SwiftLint and removed the unused `SwiftUI` and `Cocoa` imports from `Xpop/main.swift`.

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -31,6 +31,9 @@ opt_in_rules:
   # - no_magic_numbers
   # - force_unwrapping
 
+analyzer_rules:
+  - unused_import
+
 line_length:
   warning: 120
   ignores_comments: true
